# ShaunDB

./: .bazelignore  .bazelrc  .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  clear.sh  config.yaml  copts.bzl  make.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmark/db_benchmark/: BUILD.bazel
benchmark/logbenchmark/: BUILD.bazel  fverlog_glog_benchmark.cpp  fverlog_spdlog_benchmark.cpp  fverlog_zlog_benchmark.cpp  shaundblog_glog_benchmark.cpp  shaundblog_spdlog_benchmark.cpp
dep/: fmt.BUILD  rocksdb.BUILD
doc/: klrucache_design_cn.md  kvengine_design_cn.md  log_design_cn.md  net_design_cn.md  raft_design_cn.md  wal_design_cn.md
doc/image/: shaundb_arch.drawio
src/: CMakeLists.txt
src/base/: BUILD.bazel  NonCopyable.hpp  TaskControl.hpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  TimeStamp.cpp  TimeStamp.hpp  backtrace.cpp  backtrace.hpp  bgworker.hpp  fthread.hpp  thread.hpp  threadpool.cpp  threadpool.hpp  threadsafequeue.hpp  timestamp.cpp  timestamp.hpp
src/base/log/: AsyncLoggingThread.cpp  AsyncLoggingThread.hpp  BUILD.bazel  LogBuffer.cpp  LogBuffer.hpp  LogFile.cpp  LogFile.hpp  Logger.cpp  Logger.hpp  Logging.cpp  Logging.hpp  ThreadLocalBuffer.cpp  ThreadLocalBuffer.hpp  logbuffer.cpp  logbuffer.hpp  logfile.cpp  logfile.hpp  logger.cpp  logger.hpp  logging.cpp  logging.hpp  logthread.cpp  logthread.hpp
src/base/test/: BUILD.bazel  LogBuffer_test.cpp  LogFile_test.cpp  Logging_file_test.cpp  Logging_test  Logging_test.cpp  ThreadPool_test.cpp  TimeStamp_test.cpp  a.out  build_Logging_test.sh  build_ThreadPool_test.sh  global_test  global_test.cpp  global_test.hpp  libfmt_test.cpp  log_out_test.cpp  log_to_file.cpp  logfile_test.cpp  logging_file_test.cpp  signal_test.cpp  threadpool_test
src/common/: BUILD.bazel  helper.h  timestamp.cc  timestamp.h
src/db/: BUILD.bazel  comp.cpp  comp.hpp  compactor.cpp  compactor.hpp  db.proto  dbconfig.hpp  environment.hpp  exportdb.cpp  exportdb.hpp  key_format.cpp  key_format.hpp  level_merger.hpp  memtable.cpp  memtable.hpp  memtable_view.cpp  memtable_view.hpp  memtable_view_manager.cpp  memtable_view_manager.hpp  request.hpp  shared_memtable.cpp  shared_memtable.hpp  snapshot.cpp  snapshot.hpp  sstable.cpp  sstable.hpp  sstable_manager.cpp  sstable_manager.hpp  status.cpp  status.hpp  wal_writer.cpp  wal_writer.hpp
src/db/test/: BUILD.bazel  key_format_test.cpp  memtable_mmap_view_test.cpp  memtable_test.cpp  minor_compaction_test.cpp  shared_memtable_test.cpp  sstable_io_uring_test.cpp  varint_encode_test.cpp  wal_log_test.cpp
src/log/: BUILD.bazel  conf.h  logbuf.h  logger.h  slog.h
src/net/: BUILD.bazel  Channel.hpp  EventLoop.hpp  InetAddress.hpp  Poll.hpp  Poller.hpp  Socket.hpp  active_conn.cpp  active_conn.hpp  conn_callback.cpp  conn_callback.hpp  connection.cpp  connection.hpp  net_connection.cpp  net_connection.hpp  net_server.cpp  net_server.hpp  repeated_timer.cpp  repeated_timer.hpp  single_timer.cpp  single_timer.hpp
src/net/rpc/: BUILD.bazel  codeclite.cpp  codeclite.hpp  rpc.pb.cc  rpc.pb.h  rpc.proto  rpc_channel.cpp  rpc_channel.hpp  rpc_code.cpp  rpc_code.hpp  rpc_server.cpp  rpc_server.hpp
src/net/rpc/test/: BUILD.bazel  rpc_server_client_test.cpp  rpc_server_test.cpp  set_kv.proto
src/net/test/: BUILD.bazel  active_conn_test.cpp  echo_server_test.cpp  epolldemo_test.cpp  epolldemoclient_test.cpp  repeated_timer_test.cpp  single_timer_test.cpp
src/parallel_hashmap/: BUILD.bazel
src/raft/: BUILD.bazel  fiber_define.hpp  log.hpp  raft.pb.cc  raft.pb.h  raft.proto  raft_log.hpp  raft_node.cpp  raft_node.hpp  raft_peer.cpp  raft_peer.hpp  raft_server.cpp  raft_server.hpp  raft_service.cpp  raft_service.hpp  raftconf.hpp  raftconfigparse.hpp  storage.cpp  storage.hpp
src/raft/test/: BUILD.bazel  testkv.cpp  testkv.pb.cc  testkv.pb.h  testkv.proto  testkv_client.cpp  testkv_server.cpp
src/server/: BUILD.bazel  config.yaml  configparse.cpp  configparse.hpp  redis_protocol.cpp  redis_protocol.hpp  server.cpp  server.hpp
src/server/test/: BUILD.bazel  redis_protocol_test.cpp  shaunkv_server_test.cpp  yaml_parse_test.cpp  yaml_parse_test.yaml
src/sql/: BUILD.bazel  column.h  datatype.cc  datatype.h  expression.h  from_item.h  keyword.cc  keyword.h  lexer.cc  lexer.h  literal.h  operation.h  operator.cc  operator.h  parser.cc  parser.h  statement.h  token.h
src/util/: BUILD.bazel  bitset.hpp  bloomfilter.hpp  crc32.cpp  crc32.hpp  iouring.cpp  iouring.hpp  klrucache.cpp  klrucache.hpp
src/util/file/: BUILD.bazel  appendfile.cpp  appendfile.hpp  readonlyfile.cpp  readonlyfile.hpp  wal_log.cpp  wal_log.hpp
src/util/file/test/: BUILD.bazel  appendfile_test.cpp
src/util/hash/: BUILD.bazel  city_hash.cpp  city_hash.hpp  farmhash.cpp  farmhash.hpp  xxhash64.hpp
src/util/test/: BUILD.bazel  bitset_test.cpp  bloomfilter_test.cpp  hash_func_test.cpp  iouring_demo.c  iouring_test.cpp  klrucache_test.cpp
test/: memtable_0_level0.sst  memtable_1_level0.sst  memtable_2_level0.sst  memtable_3_level0.sst  test.sst
tests/: CMakeLists.txt
tests/common/: BUILD.bazel  CMakeLists.txt  timestamp_test.cc
tests/log/: BUILD.bazel  CMakeLists.txt  basic_test.cc
tests/sql/: BUILD.bazel  CMakeLists.txt  lexer_test.cc
ubers/base/: AsyncLogThread.cpp  AsyncLogThread.h  CurrentThread.h  Exception.cpp  Exception.h  File.cpp  File.h  LockFreeQueue.hpp  LogFile.cpp  LogFile.h  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.hpp  TimeStamp.cpp  TimeStamp.h
ubers/config/: UBERS_Server.json
ubers/http/: HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
ubers/net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CallBack.h  Channel.cpp  Channel.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  Timer.h  (+14 more)
(+17 files in other folders)
