load("//:copts.bzl", "FVER_FLAGS", "FVER_BENCHMARK_FLAGS")
package(default_visibility=["//visibility:public"])



cc_test(
    name="shaundblog_vs_glog_benchmark",
    srcs=glob([
        "shaundblog_glog_benchmark.cpp",
    ]),
    deps=[
        "//src/base:base_lib",
        "//src/base/log:fver_log_lib",
        "@com_google_googletest//:gtest_main",
        "@com_google_benchmark//:benchmark_main",
    ],
    visibility=["//visibility:public"],
    copts=FVER_FLAGS + FVER_BENCHMARK_FLAGS,
    linkopts=[
        "-lglog",
        "-lpthread", ],
)


cc_test(
    name="shaundblog_vs_spdlog_benchmark",
    srcs=glob([
        "shaundblog_spdlog_benchmark.cpp",
    ]),
    deps=[
        "//src/base:base_lib",
        "//src/base/log:fver_log_lib",
        "@com_google_googletest//:gtest_main",
        "@com_google_benchmark//:benchmark_main",
    ],
    visibility=["//visibility:public"],
    copts=FVER_FLAGS + FVER_BENCHMARK_FLAGS,
    linkopts=[
        "-lpthread",
        "-lspdlog",
    ],
)