load("//:copts.bzl", "DEFAULT_FLAGS")
package(default_visibility=["//visibility:public"])



cc_library (
  name = "common_lib",
  hdrs = glob(
    ["*.h"],
  ),
  srcs = glob(
    ["*.cc"],
  ),
  deps = [
    "@com_github_fmtlib_fmt//:fmt"
  ],
  copts = DEFAULT_FLAGS,
  visibility = [
    "//visibility:public"
  ],
  linkopts = [
    "-lfmt",
  ],
)