package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")


cc_library(
  name="fver_db_lib",
  hdrs=glob(["*.hpp"]),
  srcs=glob(["*.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
  ],
)
