package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name="fver_db_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob(["*.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/base/log:fver_log_lib",
        "//src/util:fver_util_lib",
    ],
    linkopts=[
        "-lglog",
    ],
)
