package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_proto_library(
  name="raft_proto_cc_pb",
  visibility=["//visibility:public"],
  deps=[
    ":raft_proto_lib",
  ],
)

proto_library(
  name="raft_proto_lib",
  srcs=["raft.proto"],
  visibility=["//visibility:public"],
)

cc_grpc_library(
  name="raft_cc_grpc_lib",
  srcs=[":raft_proto_lib"],
  grpc_only=True,
  deps=["raft_proto_cc_pb"],
)

cc_library (
  name = "fiber_define_lib",
  srcs = ["fiber_define.hpp"],
  deps = [
    "@boost//:fiber",
  ],
  linkopts = [
    "-lpthread",
  ],
)


cc_library(
  name="shaundb_raft_lib",
  hdrs=glob(["*.hpp"]),
  srcs=glob(["*.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    ":raft_cc_grpc_lib",
    "//src/base/log:fver_log_lib",
    "//src/net:fver_net_lib",
    "@com_github_grpc_grpc//:grpc++",
    "@boost//:fiber",
  ],
  linkopts=[
    "-lpthread",
    "-lrocksdb",
  ],
)