package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")


cc_library(
    name="fver_server_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob(["*.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/net:fver_net_lib",
        "@yaml_cpp//:yaml-cpp",
        "//src/db:fver_db_lib",
        "//src/base/log:fver_log_lib",
    ],
)
