package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")


cc_library(
    name="fver_util_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob(["*.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util/hash:util_hash_lib",
        "//src/util/file:fver_util_file_lib",
        "//src/base/log:fver_log_lib",
        "@abseil//absl/container:flat_hash_map",
    ],
    linkopts=[
        "-lpthread",
        "-luring",
    ],
)
