
load("//:copts.bzl", "FVER_FLAGS")
package(default_visibility=["//visibility:public"])


cc_library(
    name="fver_log_lib",
    hdrs = glob(["*.hpp"]),
    srcs=glob([
        "*.cpp",
    ]),
    deps=[
        "//src/base:base_lib",
    ],
    visibility=["//visibility:public"],
    copts = FVER_FLAGS,
    linkopts = ["-lfmt"],
)
