
load("//:copts.bzl", "FVER_FLAGS")
package(default_visibility=["//visibility:public"])


cc_library(
    name="fver_log_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob([
        "*.cpp",
    ]),
    deps=[
        "//src/base:base_lib",
        "@fmt",
    ],
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    linkopts=[
        "-lpthread", ],
)

cc_library(
    name="fver_log_file_lib",
    hdrs=glob(["logfile.hpp", ]),
    srcs=glob(["logfile.cpp", ]),
    copts=FVER_FLAGS,
    deps=[
        "//src/base:base_lib",
        "@fmt",
    ],
)

cc_library(
    name="fver_log_out_std_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob([
        "*.cpp",
    ]),
    deps=[
        "//src/base:base_lib",
        "@fmt",
    ],
    copts=FVER_FLAGS,
)
