load("//:copts.bzl", "FVER_FLAGS")
package(default_visibility=["//visibility:public"])


cc_test(
    name="log_file_test",
    srcs=glob([
        "logging_file_test.cpp"]),
    deps=[
        "//src/base/log:fver_log_lib",
        "//src/base:base_lib",
    ],
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
)
