package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")

cc_test(
  name="wal_log_test",
  srcs=glob(["wal_log_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "//src/db:fver_db_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)

cc_test(
  name="memtable_test",
  srcs=glob(["memtable_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "//src/db:fver_db_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)

cc_test(
  name="shared_memtable_test",
  srcs=glob(["shared_memtable_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "//src/db:fver_db_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)

cc_test(
  name="key_format_test",
  srcs=glob(["minor_compaction_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "//src/db:fver_db_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)

cc_test(
  name="varint_encode_test",
  srcs=glob(["varint_encode_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "//src/db:fver_db_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)