package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")


cc_proto_library(
    name="frpc_proto_cc_pb",
    visibility=["//visibility:public"],
    deps=[
        ":frpc_proto_lib",
    ],
)

proto_library(
    name="frpc_proto_lib",
    srcs=["rpc.proto"],
    visibility=["//visibility:public"],
)


cc_library(
    name="fver_rpc_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob(["*.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    linkopts=[
        "-lpthread",
        "-lprotoc",
    ],
    deps=[
        "//src/base/log:fver_log_lib",
        "//src/net:fver_net_lib",
        "@com_google_protobuf//:protoc_lib",
        "frpc_proto_cc_pb",
    ],
)
