package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")


cc_library(
    name="fver_util_file_lib",
    hdrs=glob(["*.hpp"]),
    srcs=glob(["*.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/base/log:fver_log_lib",
        "@com_google_absl//absl/hash",
    ],
)
