package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS", "FVER_DEBUG_LINK")

cc_test(
    name="bloomfilter_test",
    srcs=glob(["bloomfilter_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util:fver_util_lib",
        "@com_google_googletest//:gtest_main",
        "@abseil//absl/hash",
    ],
    linkopts=[
        "-lpthread",
        "-luuid",
    ],
)

cc_test(
    name="io_uring_test",
    srcs=glob(["iouring_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util:fver_util_lib",
        "@com_google_googletest//:gtest_main",
        "@abseil//absl/hash",
    ],
    linkopts=[
        "-lpthread",
        "-luring",
    ],
)

cc_test(
    name="bitset_test",
    srcs=glob(["bitset_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util:fver_util_lib",
        "@com_google_googletest//:gtest_main",
    ],
    linkopts=[
        "-lpthread",
        "-luring",
    ],
)

cc_test(
    name="hash_func_test",
    srcs=glob(["hash_func_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util:fver_util_lib",
        "@com_google_googletest//:gtest_main",
        "//src/util/hash:util_hash_lib",
    ],
    linkopts=[
        "-lpthread",
        "-luuid",
    ],
)

cc_test(
    name="klrucache_test",
    srcs=glob(["klrucache_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/util:fver_util_lib",
        "@com_google_googletest//:gtest_main",
        "//src/util/hash:util_hash_lib",
    ],
    linkopts=[
        "-lpthread",
        "-luuid",
    ],
)