package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")


cc_proto_library(
    name="kvtest_proto_cc_pb",
    visibility=["//visibility:public"],
    deps=[
        ":kvtest_proto_lib",
    ],
)

proto_library(
    name="kvtest_proto_lib",
    srcs=["set_kv.proto"],
    visibility=["//visibility:public"],
)

cc_test(
    name="rpc_server_client_test",
    srcs=glob(["rpc_server_client_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/net/rpc:fver_rpc_lib",
        "//src/base/log:fver_log_lib",
        "@com_google_protobuf//:protoc_lib",
        "kvtest_proto_cc_pb",
    ],
)

cc_test(
    name="rpc_server_test",
    srcs=glob(["rpc_server_test.cpp"]),
    visibility=["//visibility:public"],
    copts=FVER_FLAGS,
    deps=[
        "//src/net/rpc:fver_rpc_lib",
        "//src/base/log:fver_log_lib",
        "@com_google_protobuf//:protoc_lib",
        "kvtest_proto_cc_pb",
    ],
)
