package(default_visibility=["//visibility:public"])

load("//:copts.bzl", "FVER_FLAGS")

cc_test(
  name="append_file_test",
  srcs=glob(["appendfile_test.cpp"]),
  visibility=["//visibility:public"],
  copts=FVER_FLAGS,
  deps=[
    "//src/base/log:fver_log_lib",
    "//src/util:fver_util_lib",
    "@com_google_googletest//:gtest_main",
  ],
  linkopts=[
    "-luuid",
    "-lpthread",
  ],
)